--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
+    "jwt-decode": "^3.1.2",
     "nuxt": "^2.13.3",
     "nuxt-i18n": "^6.28.1"
   },
