--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "core-js": "^3.15.1",
     "jwt-decode": "^3.1.2",
     "nuxt": "^2.13.3",
-    "nuxt-i18n": "^6.28.1"
+    "nuxt-i18n": "^6.28.1",
+    "vue-js-modal": "^2.0.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
