--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,29 +1,24 @@
-FROM node:16.3.0-alpine3.12
+FROM node:16.13.0-alpine
 
 ARG WORKDIR
-# dev環境
 ARG API_URL
+# ARG CONTAINER_PORT
 
 ENV HOME=/${WORKDIR} \
     LANG=C.UTF-8 \
     TZ=Asia/Tokyo \
     # コンテナのNuxt.jsをブラウザから参照するためにip:0.0.0.0に紐付ける
     HOST=0.0.0.0 \
-# dev環境
     API_URL=${API_URL}
 
 WORKDIR ${HOME}
 
 COPY package*.json ./
-RUN apk update && \
-    apk upgrade && \
-    npm install -g n && \
-    yarn install && \
-    rm -rf /var/cache/apk/*
+RUN yarn install
 
 COPY . ./
 
-# ADD . ${HOME}
-# EXPOSE 3000
 RUN yarn run build
-# CMD ["yarn", "start"]
+
+# http://localhost(0.0.0.0):3000
+# EXPOSE ${CONTAINER_PORT}
